--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp-autoprefixer": "^3.1.1"
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.1"
   }
 }
